[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde
serde        = "1.0.145"
serde_json   = "1.0.85"
serde_derive = "1.0.145"
# lazy
once_cell      = "1.15.0"
async-oncecell = "0.2.0"
