[package]
name = "tcp-chatroom-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
# async runtime
tokio = { version = "1.21.1", features = ["full"] }
# concurrent libs
crossbeam = "0.8.2"
# lazy
once_cell      = "1.15.0"
async-oncecell = "0.2.0"
# serde
serde        = "1.0.145"
serde_json   = "1.0.85"
serde_derive = "1.0.145"
# console ui
tui = "0.19.0"
crossterm = "0.25.0"
